# Breeze

./: .env.example  .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SPEC.md  _headers  _redirects  _worker.js  build-all.sh  build.sh  deploy.sh  index.html  lang.js  manifest.json  package-lock.json  package.json  plan.md  robots.txt  sitemap.xml  sw.js  validate.sh  wrangler.toml
.claude/: settings.json
.claude/commands/: audit.md  billing-check.md  security-audit.md  validate.md
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.well-known/: assetlinks.json
desktop/: README.md  entitlements.mac.plist  main.js  package.json  preload.js
desktop/scripts/: postinst.sh
docs/: CATEGORY-RESEARCH-2.md  CATEGORY-RESEARCH.md  CI-SETUP.md  CRYPTO-SPEC.md  IMPROVEMENTS.md  INTEGRATION.md  PRODUCT-ANALYSIS.md  ROADMAP.md  SELF_HOSTING.md
mobile/: README.md  capacitor.config.json  package.json  prepare.js
mobile/scripts/: build-mobile.sh
src/crypto/: atrest.js  bytes.js  fingerprint.js  franking.js  group.js  ktlog.js  negotiate.js  pow.js  ratchet.js
tauri/: README.md  package.json
tauri/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs
tests/: atrest.test.js  bytes.test.js  fingerprint.test.js  franking.test.js  group.test.js  kat.test.js  ktlog.test.js  negotiate.test.js  pow.test.js  push.test.js  ratchet.test.js  worker.test.js  x3dh.test.js
(+1 files in other folders)
